--- a/src/main/java/oodj/login/studentlogin.form
+++ b/src/main/java/oodj/login/studentlogin.form
@@ -26,10 +26,10 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel2" alignment="1" min="-2" pref="137" max="-2" attributes="0"/>
-                  <Component id="jLabel3" alignment="0" min="-2" pref="137" max="-2" attributes="0"/>
+                  <Component id="jLabel3" min="-2" pref="137" max="-2" attributes="0"/>
+                  <Component id="jLabel2" alignment="0" min="-2" pref="166" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="55" pref="55" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
                       <Component id="jTextField2" pref="282" max="32767" attributes="0"/>
